Fixed service items overflow

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -402,6 +402,7 @@ button:hover {
 }
 
 .service-item {
+    max-height: 450px;
     margin-bottom: 10px;
     padding: 50px;
     background-color: rgba(250, 250, 250, 0.1);
